fixed footer nav on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -307,6 +307,11 @@ footer nav a {
         padding-bottom: 15px;
     }
 
+    footer nav {
+        width: 100%;
+        justify-content: space-evenly;
+    }
+
 
 
 
